Comments: Fix some avatars overflowing

--- a/youtube/static/comments.css
+++ b/youtube/static/comments.css
@@ -81,6 +81,9 @@
     height:32px;
     width:32px;
 }
+    .comment .author-avatar-img{
+        max-height: 100%;
+    }
 
 .comment address{
     grid-column: 2;
